log
Sat 30 Mar 2024 03:50:41 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
e25d341
Sat 30 Mar 2024 03:51:02 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
663f742
Sat 30 Mar 2024 03:53:05 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5ad4719
Sat 30 Mar 2024 03:53:28 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   43 |     return *(list->head);
      |            ^~~~~~~~~~~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7260d94
Sat 30 Mar 2024 03:54:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ed2827b
Sat 30 Mar 2024 03:54:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2b49319
Sat 30 Mar 2024 03:55:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9764640
Sat 30 Mar 2024 03:59:10 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c003f39
Sat 30 Mar 2024 03:59:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
44040fc
Sat 30 Mar 2024 03:59:51 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
list.c: In function ‘firstList’:
cc1: error: function may return address of local variable [-Werror=return-local-addr]
In file included from test.c:5:
list.c:43:7: note: declared here
   43 |   int a = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
272a44f
Sat 30 Mar 2024 04:00:56 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:4: error: ‘J’ undeclared (first use in this function)
   44 |   *J = 0;
      |    ^
list.c:44:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a717ac8
Sat 30 Mar 2024 04:01:03 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
693ab6b
Sat 30 Mar 2024 04:01:18 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: ‘j’ undeclared (first use in this function)
   43 |     return j;
      |            ^
list.c:43:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4aa21f9
Sat 30 Mar 2024 04:01:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
22dce55
Sat 30 Mar 2024 04:03:04 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
66f2f2f
